Update entity field
