# api/dto/loai_doc_gia.go
@@ -1,9 +1,11 @@
 package dto
 
 type PostLoaiDocGiaDto struct {
-	TenLoaiDocGia string `json:"tenLoaiDocGia" binding:"required"`
+	TenLoaiDocGia       string `json:"tenLoaiDocGia" binding:"required"`
+	SoSachToiDaDuocMuon int    `json:"soSachToiDaDuocMuon" binding:"required"`
 }
 
 type PutLoaiDocGiaDto struct {
-	TenLoaiDocGia string `json:"tenLoaiDocGia" binding:"required"`
+	TenLoaiDocGia       string `json:"tenLoaiDocGia" binding:"required"`
+	SoSachToiDaDuocMuon int    `json:"soSachToiDaDuocMuon" binding:"required"`
 }
