# core/entity/loai_doc_gia.go
@@ -1,11 +1,12 @@
 package entity
 
 type LoaiDocGia struct {
-	MaLoaiDocGia  *ID
-	TenLoaiDocGia string
+	MaLoaiDocGia        *ID
+	TenLoaiDocGia       string
+	SoSachToiDaDuocMuon int
 }
 
-func NewLoaiDocGia(tenLoaiDocGia string) *LoaiDocGia {
+func NewLoaiDocGia(tenLoaiDocGia string, soSachToiDaDuocMuon int) *LoaiDocGia {
 	newId := NewID()
 	return &LoaiDocGia{
 		MaLoaiDocGia:  &newId,
